Closed
Bug 556808
Opened 15 years ago
Closed 15 years ago
ASSERTION: unknown nsISVGValue: 'Not Reached', when appending segment to SVG path
Categories
(Core :: SVG, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: dholbert, Assigned: longsonr)
Details
Attachments
(3 files)
See attached minimal testcase, which produces this output in my Linux debug build:
> ###!!! ASSERTION: unknown nsISVGValue: 'Not Reached', file ../../../../../mozilla/content/svg/content/src/nsSVGElement.cpp, line 1003
Reporter | ||
Comment 1•15 years ago
|
||
Here's the backtrace when we hit the NOTREACHED. We hit it because i == count -- but in this case, they're both 0, actually.
Reporter | ||
Comment 2•15 years ago
|
||
Here's the code around the failure, to provide context for comment 1:
978 nsSVGElement::GetModificationDataForObservable(nsISVGValue* aObservable,
[...]
992 PRUint32 i, count = mMappedAttributes.AttrCount();
993 const nsAttrValue* attrValue = nsnull;
994 for (i = 0; i < count; ++i) {
995 attrValue = mMappedAttributes.AttrAt(i);
996 if (attrValue->GetSVGValue() == aObservable) {
997 break;
998 }
999 }
1000
1001 if (i == count) {
1002 NS_NOTREACHED("unknown nsISVGValue");
1003
1004 return ObservableModificationData(nsnull, 1);
1005 }
Assignee | ||
Comment 3•15 years ago
|
||
And the testcase?
Reporter | ||
Comment 4•15 years ago
|
||
oops, sorry! meant to attach when filing bug. Here's the testcase.
Assignee | ||
Comment 5•15 years ago
|
||
mSegments is not mapped.
Assignee: nobody → longsonr
Attachment #437820 -
Flags: review?(jwatt)
Updated•15 years ago
|
Attachment #437820 -
Flags: review?(jwatt) → review+
Assignee | ||
Comment 6•15 years ago
|
||
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•