Bug 556808 - ASSERTION: unknown nsISVGValue: Not Reached, when appending segment to SVG path. r=jwatt